--- a/public/index.html
+++ b/public/index.html
@@ -59,12 +59,35 @@
                     <button class="btn">Get Started</button>
                     <a href="#">
                         <span><i class="ri-play-fill"></i></span>
-                        Watch Video 
+                        Watch Video
                     </a>
                 </div>
             </div>
         </div>
     </header>
+
+    <section class="section__container service__container" id="service">
+        <p class="section__subheader">WHAT WE SERVE</p>
+        <h2 class="section__header">Your Favorite Food Delivery Partner</h2>
+        <div class="service__grid">
+            <div class="service__card">
+                <img src="assets/service-1.jpg" alt="service">
+                <h4>Easy To Order</h4>
+                <p>You only need a few steps to order food</p>
+            </div>
+            <div class="service__card">
+                <img src="assets/service-2.jpg" alt="service">
+                <h4>Fastest Delivery</h4>
+                <p>Delivery that is always on time even faster</p>
+            </div>
+            <div class="service__card">
+                <img src="assets/service-3.jpg" alt="service">
+                <h4>Best Quality</h4>
+                <p>Not only fast but the quality also number one</p>
+            </div>
+        </div>
+    </section>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
 </body>
