3rd: menu / swiper

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
     <title>Fado | Oleh Chornyi</title>
 </head>
@@ -88,7 +89,95 @@
         </div>
     </section>
 
+    <section class="section__container menu__container" id="menu">
+        <p class="section__subheader">OUR MENU</p>
+        <h2 class="section__header">Menu That Always Make You Fall In Love</h2>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="menu__card">
+                        <img src="assets/menu-1.jpg" alt="menu" />
+                        <div class="menu__card__details">
+                            <h4>Italian Pizza</h4>
+                            <h5><span>$</span>7.49</h5>
+                            <a href="#">
+                                Order Now
+                                <span><i class="ri-arrow-right-line"></i></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="menu__card">
+                        <img src="assets/menu-2.jpg" alt="menu" />
+                        <div class="menu__card__details">
+                            <h4>Burrito Wrap</h4>
+                            <h5><span>$</span>4.49</h5>
+                            <a href="#">
+                                Order Now
+                                <span><i class="ri-arrow-right-line"></i></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="menu__card">
+                        <img src="assets/menu-3.jpg" alt="menu" />
+                        <div class="menu__card__details">
+                            <h4>Red Sause Pasta</h4>
+                            <h5><span>$</span>5.49</h5>
+                            <a href="#">
+                                Order Now
+                                <span><i class="ri-arrow-right-line"></i></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="menu__card">
+                        <img src="assets/menu-4.jpg" alt="menu" />
+                        <div class="menu__card__details">
+                            <h4>Fresh Pan Pizza</h4>
+                            <h5><span>$</span>6.49</h5>
+                            <a href="#">
+                                Order Now
+                                <span><i class="ri-arrow-right-line"></i></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="menu__card">
+                        <img src="assets/menu-5.jpg" alt="menu" />
+                        <div class="menu__card__details">
+                            <h4>Chicken Nuggets</h4>
+                            <h5><span>$</span>5.99</h5>
+                            <a href="#">
+                                Order Now
+                                <span><i class="ri-arrow-right-line"></i></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="menu__card">
+                        <img src="assets/menu-6.jpg" alt="menu" />
+                        <div class="menu__card__details">
+                            <h4>Dum Biryani</h4>
+                            <h5><span>$</span>8.49</h5>
+                            <a href="#">
+                                Order Now
+                                <span><i class="ri-arrow-right-line"></i></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
 
