--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,34 @@
         </div>
     </section>
 
+    <section class="section__container client__container" id="client">
+        <div class="client__image">
+            <img src="assets/client.png" alt="client" />
+        </div>
+        <div class="client__content">
+            <p class="section__subheader">WHAT THEY SAY</p>
+            <h2 class="section__header">What Our Customers Say About Us</h2>
+            <p class="section__description">
+                Fado is simply outstanding! The variety and deliciousness of their meals are unparalleled, offering something for every plate. What sets Fado apart is their exceptional service. The delivery is impressively fast, ensuring your food arrive fast and fresh.
+            </p>
+            <div class="client__details">
+                <img src="assets/user.jpg" alt="client">
+                <div>
+                    <h4>Theresa Jordan</h4>
+                    <h5>Food Enthusiast</h5>
+                </div>
+            </div>
+            <div class="client__rating">
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-fill"></i></span>
+                <span><i class="ri-star-line"></i></span>
+                <span>4.8</span>
+            </div>
+        </div>
+    </section>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
