5th: download app

--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,9 @@
             <p class="section__subheader">WHAT THEY SAY</p>
             <h2 class="section__header">What Our Customers Say About Us</h2>
             <p class="section__description">
-                Fado is simply outstanding! The variety and deliciousness of their meals are unparalleled, offering something for every plate. What sets Fado apart is their exceptional service. The delivery is impressively fast, ensuring your food arrive fast and fresh.
+                Fado is simply outstanding! The variety and deliciousness of their meals are unparalleled, offering
+                something for every plate. What sets Fado apart is their exceptional service. The delivery is
+                impressively fast, ensuring your food arrive fast and fresh.
             </p>
             <div class="client__details">
                 <img src="assets/user.jpg" alt="client">
@@ -200,6 +202,24 @@
                 <span><i class="ri-star-fill"></i></span>
                 <span><i class="ri-star-line"></i></span>
                 <span>4.8</span>
+            </div>
+        </div>
+    </section>
+
+    <section class="download__container" id="contact">
+        <div class="section__container">
+            <div class="download__image">
+                <img src="assets/download.png" alt="download" />
+            </div>
+            <div class="download__content">
+                <p class="section__subheader">DOWNLOAD APP</p>
+                <h2 class="section__header">Get Started With Fado Today!</h2>
+                <p class="section__description">
+                    Discover food wherever and whenever you want and get your food delivery on time, everytime.
+                </p>
+                <p class="download__btn">
+                    <button class="btn">Get The App</button>
+                </p>
             </div>
         </div>
     </section>
